# Client_Server

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  BestFirstSearch.cpp  BestFirstSearch.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  DFS.cpp  DFS.h  FileCacheManager.cpp  FileCacheManager.h  ICacheManager.h  IClientHandler.h  ISearcher.h  IServer.h  Matrix.cpp  Matrix.h  Matrrix.cpp  Matrrix.h  MyClientHandler.cpp  MyClientHandler.h  MyPrallelServer.cpp  MyPrallelServer.h  MySerialServer.cpp  MySerialServer.h  ParallelServer.cpp  ParallelServer.h  PriorityQueue.cpp  PriorityQueue.h  Searchable.h  SearchableMatrix.h  Searcher.h  Separater.cpp  Separator.cpp  Separator.h  Server.h  (+18 more)
